DT-2004-02-18-2: Bugfix:    Fixed JGrid Howto mistakes.
                 Changed:   JGrid Howto

SG-2004-02-18-2: Bugfix:    - the qmaster did not terminate, when no event
                              client was registered.
                            - the qmaster shutdown event is delivered to 
                              all clients
                 Changed:   master
                 Review:    CR, AD
                 Issue:     669

CR-2004-02-18-0: Enhancem.: - added error function callback for communication 
                            errors
                            - connect response message reports now if connection
                            endpoint is already connected with service endpoint
                 Changed:   communication lib

DT-2004-02-18-1: Bugfix:    Added missing -sconf param in qconf
                 Changed:   flatfile spooling

SG-2004-02-18-1: Bugfix:    the total update events were delivered with
                            the next regular event.
                 Changed:   master

SG-2004-02-18-0: Cleanup:   first part of doing the event client matching in
                            the event master thread.
                 Changed:   master
                 Review:    DT

AD-2004-02-18-0: Bugfix:    Did fix 'qconf -secl' and 'qconf -sss'.
                 Changed:   qmaster, evm
                 Review:    SG
                 Issue:     666

DT-2004-02-18-0: Bugfix:    Fixed backslash line continuation for all objects
                            in qconf.  Will break on spaces or commas.
                            Propogated removal of SGE/SGEEE through qconf and
                            flatfile spooling.
                            Fixed build on Solaris x86.
                            Fixed other minor qconf and flatfile spooling
                            issues.
                 Changed:   qconf, qmon, flatfile spooling

AS-2004-02-17-0: Cleanup:   aimk cleanup, #define cleanup, IRIX 6.5 compile
